--- a/about.html
+++ b/about.html
@@ -9,6 +9,8 @@ layout: default
 Boa also exists to serve as a Rust implementation of the EcmaScript specification, there will be areas where we can utilise Rust and its fantastic ecosystem to make a fast, concurrent and safe engine.
   </p>
 
+  <p><a href="https://github.com/boa-dev/boa">Boa's Github page</a></p>
+
   <p>Boa was introduced at JSConf EU 2019 by <a href="https://jason-williams.co.uk/">Jason Williams</a></p>
   <p>You can learn more in the video below</p>
   <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/_uD2pijcSi4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
