--- a/about.html
+++ b/about.html
@@ -15,6 +15,6 @@ Boa also exists to serve as a Rust implementation of the EcmaScript specificatio
   <p>You can learn more in the video below</p>
   <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/_uD2pijcSi4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
+  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" }}">via RSS</a></p>
 
 </div>
