--- a/about.html
+++ b/about.html
@@ -4,10 +4,12 @@ layout: default
 
 <div class="home">
 <H1>About</H1>
-  <p>
-    Boa is an experimental Javascript lexer, parser and compiler written in Rust. Currently, it has support for some of the language. It can be embedded in Rust projects fairly easily and also used from the command line.  
-Boa also exists to serve as a Rust implementation of the EcmaScript specification, there will be areas where we can utilise Rust and its fantastic ecosystem to make a fast, concurrent and safe engine.
-  </p>
+  <p>Boa is an experimental Javascript lexer, parser and compiler written in Rust.
+    Currently, it has support for some of the language. It can be embedded in Rust
+    projects fairly easily and also used from the command line.  
+    Boa also exists to serve as a Rust implementation of the EcmaScript specification,
+    there will be areas where we can utilise Rust and its fantastic ecosystem to make
+    a fast, concurrent and safe engine.</p>
 
   <p><a href="https://github.com/boa-dev/boa">Boa's Github page</a></p>
 
